--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=8887
 
+github.client.id=b607be865a86525ba6f8
+github.client.secret=a22af1f19d88eca27f7479290ace694ac8f91fe0
+github.redirect_uri=http://localhost:8080/callback
