--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8887
-
 github.client.id=b607be865a86525ba6f8
 github.client.secret=a22af1f19d88eca27f7479290ace694ac8f91fe0
 github.redirect_uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
